# paper-server-tools

./: .gitignore  README.md  setup  setup.sh
Scripts/: pst-create.sh  pst-list.sh  pst-run.sh  pst-stop.sh  pst_backup  pst_stop  pst_stopd
minecrafter_bot/: Cargo.toml  run.sh
minecrafter_bot/src/: main.rs
scripts/: pst-backup.sh  pst-cli.sh  pst-create.sh  pst-current.sh  pst-list.sh  pst-restore.sh  pst-run.sh  pst-stop.sh  pst-stopd.sh  stopd.sh
