[package]
name = "minecrafter_bot"
version = "0.1.0"
authors = ["Justus Röderer <justus.roederer@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
craftping = { version = "0.2", features = ["async-tokio"] }
chrono = "0.4"
